# capital-optimizer

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: evals.yml
data/synthetic/: generate.py
demo/: app.py  requirements.txt
evals/: run_evals.py
evals/results/: summary.json
src/: __init__.py  economics.py  narrator.py  optimizer.py  projects.py  scenarios.py  schedule.py
tests/: test_economics.py  test_multiperiod.py  test_optimizer.py  test_projects_csv.py
